# my-fs-mcp

./: .gitignore  Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
server/: config.py  main.py  utils.py
